GMic: update to 2.9.8

This update rolls all existing updates into a single patch and
integrates the following new changes:

- Update the plugin to the new GMic-Qt API (while also ignoring it,
  because to implement the plugin architecture it needs to run within
  our QCoreApplication)
- Add support for compiling under MSVC (this includes support for FFTW3,
  LTO, Control Flow Guard, the MinGW stack size increase, and a fix to
  the CreateThread callback signature in GMic)
- Add support for Android (future proof)
- Make FFTW3 a truly optional library (the GMic-Qt toggle is a dud at
  present, this patch fixes it)
- Increase the minimum on-launch update timeout to 60s (as soon as you
  have some ping, the update will spuriously fail)
- Restore compatibility with stock GMic-Qt settings (previously, due to
  an oversight on my part, it wrote them willy-nilly in the Krita
  namespace)

It also adds new defines that allow to disable the following:
- Dark Theme mode
- Internet access by default
- GMic-Qt's own i18n management, thus respecting the host app's
  language
- All updates altogether

BUG: 439990